QuorumWebsite/examples/Errors/Error3.quorum
repeat 10 times

text= name input("Please enter your first name:")
output "Hello world!", Name
end